# f1tenth-rewrite

./: .gitignore  .gitmodules  Makefile  README.md
src/auto/config/: orange.yaml  tx2-auto-3-sim.yaml  tx2-auto-usa.yaml
src/auto/launch/: auto.localization.launch.py  auto.slam.launch.py
src/auto/urdf/: auto.urdf
src/decision_and_control/kinematic_mpc/: CMakeLists.txt  README.md  package.xml
src/decision_and_control/kinematic_mpc/src/: mpc_node.cpp
src/decision_and_control/kinematic_mpc/src/MPC_cpp/: README.md  base_model.hpp  constants.h  kinematic_model.cpp  kinematic_model.h  main.cpp  mpc.cpp  mpc.h
src/vehicle_platform/drive_api/drive_api/: drive_api_node.py
